# ai_editor

./: .gitignore  CMakeLists.txt  README.md  Task.md  tasks.md
.github/workflows/: ci.yml  release.yml
apps/bridge_cli/: CMakeLists.txt  main.cpp
apps/bridge_daemon/: CMakeLists.txt  main.cpp
benchmark/: README.md  runner.py  suite.py  thresholds.json
benchmark/scenarios/: search_high_similarity.json  session_multifile.json  session_rebase.json  structure_roundtrip.json
cmake/: Packaging.cmake  version.hpp.in
docs/: 00-doc-index.md  00-文档索引.md  01-V1-需求与边界.md  01-v1-scope-and-boundaries.md  02-v1-architecture-overview.md  03-v1-risks-and-notes.md  04-V1-协议草案.md  04-v1-protocol.md  05-V1-%E5%BC%80%E5%8F%91%E8%AE%A1%E5%88%92.md  05-V1-开发计划.md  06-V1-目录结构与接口清单.md  06-v1-layout-and-interfaces.md  07-V1-构建运行与测试指南.md  07-v1-build-run-test-guide.md  08-V1-发布与部署指南.md  08-v1-release-and-deployment.md  09-V1-验证报告.md  09-v1-validation-report.md  10-V1-最终发布检查清单.md  10-v1-release-checklist.md  11-v1-text-editing-optimization-task.md  12-controlled-editing-task.md  13-windows-native-rerun-record.md  14-windows-native-signoff-runbook.md
extensions/vscode-bridge/: README.md  extension.js  package.json
extensions/vscode-bridge/lib/: bridge_client.js
libs/bridge_core/: CMakeLists.txt
libs/bridge_core/include/bridge/core/: error_codes.hpp  file_service.hpp  instance.hpp  logging.hpp  patch_service.hpp  path_policy.hpp  protocol.hpp  search_service.hpp  session_service.hpp  structure_adapters.hpp  workspace.hpp
libs/bridge_core/src/: error_codes.cpp  file_ops_extra.cpp  file_service.cpp  instance.cpp  logging.cpp  patch_service.cpp  path_policy.cpp  protocol.cpp  search_service.cpp  session_service.cpp  structure_adapters.cpp  workspace.cpp
libs/bridge_platform/: CMakeLists.txt
libs/bridge_platform/include/bridge/platform/: runtime.hpp
libs/bridge_platform/src/: runtime.cpp  runtime_posix.cpp  runtime_windows.cpp
libs/bridge_transport/: CMakeLists.txt
libs/bridge_transport/include/bridge/transport/: transport.hpp
libs/bridge_transport/src/: transport_posix.cpp  transport_windows.cpp
scripts/: check_windows_signoff.py  package_release.ps1  package_release.sh  run_benchmarks.sh  validate_v1.ps1  validate_v1.sh  windows_native_rerun_record.ps1  windows_signoff.ps1  windows_smoke.ps1
sdk/python/: bridge_sdk.py
sdk/typescript/: bridge_sdk.mjs
tests/: CMakeLists.txt  functional_cancel_edges.sh  functional_cli_contract.sh  functional_fs_ops.sh  functional_logging_release.sh  functional_patch_lifecycle.sh  functional_posix_native_package.sh  functional_search_ops.sh  functional_session_drop_change_contract.sh  functional_session_drop_change_edges.sh  functional_stream_cancel_timeout.sh  functional_windows_cli_contract.ps1  functional_windows_logging_codes.ps1  functional_windows_logging_success.ps1  functional_windows_native.ps1  functional_windows_release_package.ps1  functional_windows_stream_cancel_timeout.ps1  functional_workspace_edges.sh  functional_workspace_ops.sh  integration_cancel_ops.sh  integration_file_ops.sh  integration_logging_ops.sh  integration_patch_ops.sh  integration_patch_stream_ops.sh  integration_ping_info.sh  integration_read_stream_ops.sh  integration_recovery_ops.sh  integration_sdk_ops.sh  integration_search_ops.sh  integration_session_ops.sh  integration_stream_ops.sh  integration_structure_ops.sh  integration_timeout_ops.sh  integration_vscode_extension_ops.sh  integration_windows_native.ps1  tests_error_codes.cpp  tests_file_service.cpp  tests_file_service_edges.cpp  tests_file_stream.cpp  tests_instance.cpp  (+9 more)
tests/helpers/: common.ps1  common.sh  json_assert.py
tests/sdk/: node_smoke.mjs  python_smoke.py  vscode_extension_smoke.mjs
